# components_attach_shelf

./: CMakeLists.txt  README.md  package.xml
include/components_attach_shelf/: attach_client.hpp  attach_server.hpp  pre_approach.hpp
launch/: attach_to_shelf.launch.py
rviz/: config.rviz
src/: attach_client.cpp  attach_server.cpp  pre_approach.cpp
